Team Spacing Fix

--- a/css/main.css
+++ b/css/main.css
@@ -54,8 +54,6 @@
     width: auto;
 }
 
-
-
 #bannerLogo {
         
     display:block;
@@ -166,5 +164,5 @@ h2 {
     font-weight: 200;
     font-size: 70px !important;
     letter-spacing: 1px;
-    color:#300101
+    color:#00A0EC
 }
